# Aegis

./: .claudeignore  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_DEVELOPMENT_PLUGINS.md  CLAUDE_DEVELOPMENT_PLUGINS_DETAILED.md  Dockerfile  Makefile  README.md  agent.md  conftest.py  docker-compose.yml  pyproject.toml
.audit/: test-baseline.txt
.claude/: settings.json
.devkit/: project.yaml
.github/workflows/: ci.yml
.specs/: STATE.md
.specs/_archive/: index.md
.specs/add-frontend-sse-bsm-skill/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/add-memory-position-engine/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/add-scheduler-watchlist/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/aegis-deploy/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/aegis-e2e/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/aegis-settings/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/extend-memory-position-workflow/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/extend-position-lifecycle-s3/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/feat-observe-sprint5/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/fix-memory-position-s2-review/: STATE.md  _meta.yaml  proposal.md  requirements.md  verification.md
.specs/merge-sub-branches-to-master/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/refactor-phase1-architecture/: STATE.md  _meta.yaml  design.md  requirements.md  tasks.md  verification.md
.specs/sprint1-data-pipeline/: STATE.md  _meta.yaml
.specs/sprint1-session2-analysis-brain/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint10-aegis-positions/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint10-aegis-robust/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint10-master-integration/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint11-aegis-backtest-v2/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint11-aegis-notify/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verify.md
.specs/sprint12-branch-b-va/: STATE.md  _meta.yaml  proposal.md  requirements.md  verification.md
.specs/sprint12-branch-d-tests/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint12-phase-config/: STATE.md  _meta.yaml  proposal.md  requirements.md
.specs/sprint12-phase-predictor-core/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint13-branch-A-phase-hardening/: STATE.md  _meta.yaml  proposal.md  requirements.md  verification.md
.specs/sprint13-branch-CD-phase-debate-integration/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint13-config-validator/: STATE.md  _meta.yaml  proposal.md  requirements.md  verification.md
.specs/sprint14-branch-A-phase-quality/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint14-branch-B-data-resilience/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint14-branch-D-observability/: STATE.md  _meta.yaml  proposal.md  requirements.md  tasks.md  verification.md
.specs/sprint14-branch-E-scheduler-realtime/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint14-branch-F-finalize-and-integrate/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint15-branch-A-tech-debt-cleanup/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint15-branch-B-backtest-v3-walkforward/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint15-branch-D-llm-cost-governance/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint15-final-integration/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint15-hotfix-v0.15.1/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint15-hotfix-v0.15.1.1/: STATE.md  _meta.yaml  proposal.md  requirements.md  tasks.md
.specs/sprint15-hotfix-v0.15.2/: STATE.md  _meta.yaml  design.md  proposal.md  requirements.md  tasks.md
.specs/sprint5-infra/: STATE.md  (+6 more)
alembic/: env.py
config/: alerting_rules.yaml  config.local.yaml  x_kols.yaml
deploy/: README.md  deploy.sh  docker-compose.yml  ecosystem.config.js  setup-aws.sh  supervisord.conf
docs/: USER_GUIDE.md  coverage-baseline.md  llm-governance.md  local-smoke-checklist.md  sprint15-bd-integration.md  sprint15-hotfix-v0.15.1.md  sprint15-phase1-handover.md  sprint16-e2e-verification.md  system-positioning.md
scripts/: constitution_grep.sh  e2e_smoke.sh  install-hooks.sh  local-smoke-down.sh  local-smoke-up.sh
sprint16_plans/: 00_system_positioning_constitution_draft.md
src/: CLAUDE.md  __init__.py  cli.py  cli_services.py  config.py  db.py  models.py
tests/: conftest.py  test_alpha_vantage_skill.py  test_analytics.py  test_bsm_pricer.py  test_cli.py  test_config.py  test_config_validation.py  test_futu_skill.py  test_gex.py  test_longbridge_skill.py  test_skills.py  test_tiger_skill.py  test_volume_profile.py  test_yfinance_skill.py
web/: .env.example  CLAUDE.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
(+749 files in other folders)
